# cognitive-layer

./: .coverage  .gitignore  CHANGELOG.md  README.md  TEST_RESULTS.md  example_addons.py  guide.md  pypi_smoke_test.py  pyproject.toml  quickstart_test.py  scratch_prompt.txt  test_demo2.py
.github/workflows/: ci.yml
cognitive_aug/: __init__.py  adapters.py  async_tasks.py  concept.py  crossbar.py  dendrite.py  engine.py  exceptions.py  glia.py  gwt.py  iit.py  memory.py  neurogenesis.py  neuromod.py  profiler.py  routing.py  salience.py  selectors.py  sleep.py  state.py  telemetry.py
cognitive_aug/models/: __init__.py  autonomic_brain.py
gwt/: __init__.py  async_tasks.py  concept.py  crossbar.py  dendrite.py  engine.py  glia.py  memory.py  neurogenesis.py  neuromod.py  profiler.py  routing.py  salience.py  selectors.py  sleep.py  state.py  telemetry.py
tests/: benchmark_cognitive_engine.py  test_addons.py  test_concept.py  test_crossbar.py  test_dendrite.py  test_distributed.py  test_engine.py  test_enterprise.py  test_glia.py  test_gwt.py  test_gwt_direct.py  test_iit.py  test_neurogenesis.py  test_neuromod.py  test_sleep.py  test_standalone_brain.py
