[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-aug"
version = "0.3.0"
description = "A Global Workspace Theory (GWT) meta-learning layer for open weights LLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Ashley Allen" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

redis = [
    "redis>=4.0.0",
    "safetensors>=0.3.0"
]

[tool.hatch.build.targets.wheel]
packages = ["cognitive_aug"]
artifacts = ["cognitive_aug/py.typed"]
